Fix spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 }
 
 .element[name='about'] {
-    margin-bottom:5vh;
+    margin-bottom:66px;
 }
 
 .active {
